improve css fix bug adhan for homes fix message when hadith is visible

--- a/src/AppBundle/Resources/public/prayer-times/css/desktop.css
+++ b/src/AppBundle/Resources/public/prayer-times/css/desktop.css
@@ -79,9 +79,9 @@ body {
 }
 
 .prayers {
-    -webkit-box-shadow: 0px 0px 31px 4px rgba(255, 255, 255, 0.6);
-    -moz-box-shadow: 0px 0px 31px 4px rgba(255, 255, 255, 0.6);
-    box-shadow: 0px 0px 31px 4px rgba(255, 255, 255, 0.7);
+    -webkit-box-shadow: 0px 10px 20px 0px rgba(255,255,255,0.7);
+    -moz-box-shadow: 0px 10px 20px 0px rgba(255,255,255,0.7);
+    box-shadow: 0px 10px 20px 0px rgba(255,255,255,0.7);
     background-color: rgba(0, 0, 0, 0.5);
     margin: auto;
     width: 99%;
@@ -109,7 +109,7 @@ body {
 }
 
 .prayers .name {
-    font-size: 3.5vw;
+    font-size: 3vw;
 }
 
 .prayers .wait {
@@ -119,7 +119,7 @@ body {
 .time {
     color: yellowgreen;
     font-weight: bold;
-    font-size: 5vw;
+    font-size: 4.5vw;
     padding: 0 10px;
 }
 
@@ -130,7 +130,7 @@ small {
 
 .joumouaa, .custom-time {
     margin: 50px auto;
-    font-size: 3.5vw;
+    font-size: 3vw;
 }
 
 .joumouaa .prayer {
@@ -139,7 +139,7 @@ small {
 
 .joumouaa2-id {
     margin-top: -5px;
-    font-size: 3vw;
+    font-size: 2.5vw;
 }
 
 .header {
